--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "jsx-loader": "^0.12.2",
     "react-tools": "^0.12.2",
     "webpack": "^1.3.7",
-    "react": ">=0.12.1"
+    "react": "^0.12.2"
   },
   "peerDependencies": {
-    "react": ">=0.12.1",
+    "react": "^0.12.2",
     "reactify": ">=0.17.1"
   },
   "jest": {
