--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
   "license": "MIT",
   "devDependencies": {
     "jest-cli": "^0.1.18",
-    "jsx-loader": "^0.12.2",
-    "react-tools": "^0.12.2",
+    "jsx-loader": ">=0.13.x",
+    "react-tools": ">=0.13.x",
     "webpack": "^1.3.7",
-    "react": "^0.12.2"
+    "react": ">=0.13.x"
   },
   "peerDependencies": {
-    "react": "^0.12.2",
+    "react": ">=0.13.x",
     "reactify": ">=0.17.1"
   },
   "jest": {
